# GekoCmake

./: .gitmodules  CMakeLists.txt
autogen/: .crc_config.crc  gatt_db.c  gatt_db.h  linkerfile.ld  psa_crypto_config_autogen.h  sl_application_type.h  sl_bluetooth.c  sl_component_catalog.h  sl_event_handler.c
cmake/geko_sdk_components/app/bluetooth/in_place_ota_dfu/: CMakeLists.txt
cmake/geko_sdk_components/bootloader/: CMakeLists.txt
cmake/geko_sdk_components/cmsis/: CMakeLists.txt
cmake/geko_sdk_components/common/: CMakeLists.txt
cmake/geko_sdk_components/device/: CMakeLists.txt
cmake/geko_sdk_components/emdrv/: CMakeLists.txt
cmake/geko_sdk_components/emlib/: CMakeLists.txt
cmake/geko_sdk_components/hardware/: CMakeLists.txt
cmake/geko_sdk_components/protocol/: CMakeLists.txt
cmake/geko_sdk_components/rail/: CMakeLists.txt
cmake/geko_sdk_components/services/device_init/: CMakeLists.txt
cmake/geko_sdk_components/services/hfxo_manager/: CMakeLists.txt
cmake/geko_sdk_components/services/mpu/: CMakeLists.txt
cmake/geko_sdk_components/services/power_manager/: CMakeLists.txt
cmake/geko_sdk_components/services/sleeptimer/: CMakeLists.txt
cmake/geko_sdk_components/services/system/: CMakeLists.txt
cmake/geko_sdk_components/utils/crypto/: CMakeLists.txt
cmake/geko_sdk_components/utils/memory_manager/: CMakeLists.txt
cmake/toolchain/: arm-gcc.cmake  efm32-base.cmake  post-build.cmake
config/sdk/: app_properties_config.h  btl_interface_cfg.h  pin_config.h  sl_bluetooth_advertiser_config.h  sl_bluetooth_config.h  sl_board_control_config.h  sl_memory_config.h  sl_rail_util_pa_config.h  sl_rail_util_pti_config.h
config/sdk/btconf/: gatt_configuration.btconf  in_place_ota_dfu.xml
source/: main.c
